--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.17.2",
     "mongoose": "^6.2.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "pug": "^3.0.2"
   },
   "devDependencies": {
